# tc-fuzz

./: .gitignore  Cargo.toml  LICENSE  README.md  REPORT.md  build.rs  diagram.d2  presentation.md
.cargo/: config.toml
harness/: harness.c
src/: fuzzer.rs  generator.rs  main.rs  mutator.rs  oracle.rs
